Fix domain suggestion price layout issue

--- a/client/components/domains/domain-product-price/style.scss
+++ b/client/components/domains/domain-product-price/style.scss
@@ -31,7 +31,7 @@
 	.is-section-signup &:not( .domain-product-price__domain-step-signup-flow ) {
 		@include breakpoint-deprecated( '>660px' ) {
 			padding-left: 1em;
-			padding-right: 2em;
+			padding-right: 1em;
 		}
 	}
 
